--- a/hop-mill/templates/contact.hbs
+++ b/hop-mill/templates/contact.hbs
@@ -50,9 +50,9 @@
         </form>
     </div>
     <div class="right-side">
-        <div class="round-image">
+        <div class="round-image" style="text-align: center; justify-content: center;">
             {{ #if msg }}
-            <small class="field-{{msg.0}}-msg">
+            <small class="field-{{msg.0}}-msg" style="display: inline-block;">
                 {{ msg.1 }}
             </small>
             {{ /if }}
