--- a/hop-mill/templates/contact.hbs
+++ b/hop-mill/templates/contact.hbs
@@ -1,6 +1,6 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="../static/base.css">
-    <link rel="stylesheet" type="text/css" href="../static/contact_form.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/contact_form.css">
 </head>
 
 <body>
