--- a/hop-mill/templates/home.hbs
+++ b/hop-mill/templates/home.hbs
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="../static/base.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
 </head>
 
 <body>
