--- a/hop-mill/static/css/base.css
+++ b/hop-mill/static/css/base.css
@@ -1,32 +1,30 @@
-body {
-  background: #1a6875;
-  font-family: Arial, Helvetica, sans-serif;
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(60, 42, 71);
+    position: sticky;
+    top: 0;
 }
 
-.left-side {
-  max-width: 45%;
-  text-align: right;
-  position: absolute;
-  top: 15%;
-  left: 0;
+li {
+    float: left;
+    font-size: 23px;
 }
 
-.title {
-  color: #fff;
-  font-size: 5em;
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 36px;
+    text-decoration: none;
+  }
+  
+li a:hover {
+    background-color: rgb(40, 9, 58);
 }
-
-.sub-title {
-  color: #fff;
-  font-size: 1.3em;
-}
-
-.right-side {
-  width: 30em;
-  height: 30em;
-  background: #d0e64c;
-  border-radius: 50%;
-  position: absolute;
-  top: 10%;
-  right: 5%;
+  
+.active {
+    background-color: #4CAF50;
 }
