--- a/hop-mill/static/css/contact_form.css
+++ b/hop-mill/static/css/contact_form.css
@@ -1,13 +1,13 @@
-/* design from https://www.sanwebe.com/2014/08/css-html-forms-designs */
+/* design adapted from https://www.sanwebe.com/2014/08/css-html-forms-designs */
 .form-style {
   font: 95% Arial, Helvetica, sans-serif;
   max-width: 400px;
   margin: 10px auto;
   padding: 16px;
   background: #f7f7f7;
-  position: relative;
-  top: 60px
+  top: 60px;
 }
+
 .form-style h1 {
   background: rgb(60, 42, 71);
   padding: 20px 0;
@@ -17,6 +17,7 @@
   color: #fff;
   margin: -16px -16px 16px -16px;
 }
+
 .form-style input[type="text"],
 .form-style input[type="date"],
 .form-style input[type="datetime"],
@@ -43,6 +44,7 @@
   color: #555;
   font: 95% Arial, Helvetica, sans-serif;
 }
+
 .form-style input[type="text"]:focus,
 .form-style input[type="date"]:focus,
 .form-style input[type="datetime"]:focus,
@@ -72,6 +74,7 @@
   border-left-style: none;
   color: #fff;
 }
+
 .form-style input[type="submit"]:hover,
 .form-style input[type="button"]:hover {
   background: rgb(40, 9, 58);
