--- a/hop-mill/static/css/base.css
+++ b/hop-mill/static/css/base.css
@@ -10,7 +10,19 @@ body {
   font-size: 21px;
 }
 
+.center {
+  white-space: nowrap;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.logo {
+  display: inline-flex;
+}
+
 .page-title {
+  display: inline-flex;
   text-align: center;
 }
 
